--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@
 @import "register.css";
 @import "cards.css";
 @import "cartShop.css";
+@import "form-cliente.css";
 
 
 /* Importación de fuente desde Google Fonts */
