--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,8 @@
 @import "cards.css";
 @import "cartShop.css";
 @import "form-cliente.css";
+@import "form-pago.css";
+
 
 
 /* Importación de fuente desde Google Fonts */
