--- a/static/css/cartShop.css
+++ b/static/css/cartShop.css
@@ -12,7 +12,8 @@
 
 .cart-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    height: 60%;
     gap: 20px;
     margin-bottom: 40px;
 }
