--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -55,7 +55,12 @@
     font-family: 'Roboto', sans-serif;
     color: #666;
 }
-
+.product-price {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333;
+    margin: 5px 0;
+}
 .btn {
     display: inline-block;
     padding: 10px 20px;
