--- a/static/css/cartShop.css
+++ b/static/css/cartShop.css
@@ -107,7 +107,7 @@
 .cart-summary h3 {
     font-size: 2rem;
     font-family: 'Rubik', sans-serif;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
